# bifoiler-estimator

./: CMakeLists.txt  README.md
config/: config.yaml  test.yaml
estimator/: CMakeLists.txt  README.md
estimator/src/: MEKF.cpp  MEKF.h  covariance.h  model.cpp  model.h
estimator/test/: estimator_test.cpp
python/: plot_traj.m  plot_traj.py
src/: boat_model.cpp  boat_model.h  boat_properties.cpp  boat_properties.h  estimator.cpp  estimator_codegen.cpp  estimator_model.cpp  estimator_model.h  hydrodynamics.cpp  simulation.cpp
test/: boat_model_test.cpp  casadi_test.cpp  codegen_dynamics.c  codegen_dynamics.h  codegen_test.cpp  config_test.cpp
